packages/taquito-michel-codec/test/contracts_013/ill_typed/view_op_bad_name_invalid_char_set.tz
parameter (pair nat address) ;
storage nat ;
code { CAR ; UNPAIR ; VIEW "^$&*!#~(-=)" nat ; IF_SOME { } { PUSH nat 1 } ; NIL operation ; PAIR } ;
